# ai-robotics-workshop

./: README.md  README_JP.md
resources/project/0COldfb-6uGv7YIaGr1_FbFLnzQ/: LGQWO8CiZT8qgQmEhQpFeiY7NtEp.xml  QJ25YFfPCjKElaz2k1WKyopEjYQp.xml  R_vU7W4BYHICfV-r0qqyiEoCtoEp.xml  THl67pDOstdNfnJ2HeRaZvSehccp.xml  vdHpM0evZyEQPk1AfNrikv1ECCMp.xml
resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: 3ADbWcYHTN6T3OJ3pPFZn5aPZsId.xml  3ADbWcYHTN6T3OJ3pPFZn5aPZsIp.xml  6FDm-XHZvrTROjrb3qoSX8Znz6od.xml  6FDm-XHZvrTROjrb3qoSX8Znz6op.xml  8MgIPA-tCXtYqjQP-ZYWj26IV3Ed.xml  8MgIPA-tCXtYqjQP-ZYWj26IV3Ep.xml  GRs6SCotonf0lmeR0yk_JHZV88kd.xml  GRs6SCotonf0lmeR0yk_JHZV88kp.xml  JkCv_ZraKiHQX6DOGOtezRtkZZsd.xml  JkCv_ZraKiHQX6DOGOtezRtkZZsp.xml  TR8fVzEyKv2ulpj8bC1oK-0RJx4d.xml  TR8fVzEyKv2ulpj8bC1oK-0RJx4p.xml  UbVQ3gaKt7HhGhDqiNmGT2WTfsMd.xml  UbVQ3gaKt7HhGhDqiNmGT2WTfsMp.xml  VoutP_wnnR00g03vyggVEIXGj-Yd.xml  VoutP_wnnR00g03vyggVEIXGj-Yp.xml  Z_rjldIfbGHsAZqOCo6knmvJ2Rkd.xml  Z_rjldIfbGHsAZqOCo6knmvJ2Rkp.xml  cDA2SJKJ2lxqcGWonPiv5EFTehcd.xml  cDA2SJKJ2lxqcGWonPiv5EFTehcp.xml  d45ZD0_E236GQBfpEKKEm2gA4Xgd.xml  d45ZD0_E236GQBfpEKKEm2gA4Xgp.xml  eXx9DspwWFg7VfAOtkUMmoenjTgp.xml  iQLxrc_OIV619wcSg_6L2R05wk8d.xml  iQLxrc_OIV619wcSg_6L2R05wk8p.xml  jzeR9yK5Zs-B9IIbLfGrL1X__YQd.xml  jzeR9yK5Zs-B9IIbLfGrL1X__YQp.xml  mRXcBBRMGqmY9NQGscJ-WE_r5Dod.xml  mRXcBBRMGqmY9NQGscJ-WE_r5Dop.xml  nP8LWij6PjFpGgKSDpKyd2Odx8gd.xml  nP8LWij6PjFpGgKSDpKyd2Odx8gp.xml  rJ-5f9zYELt3RosHYt4dYdN3Bzwd.xml  rJ-5f9zYELt3RosHYt4dYdN3Bzwp.xml  re93B5-kK-NWW0cLXdUalYgIV8Qd.xml  re93B5-kK-NWW0cLXdUalYgIV8Qp.xml
resources/project/Hd6KPvwB3Bjr5Lc7_gIgP7FN6wM/: 8u2bNyZ3L7hNOCi-h7YBcl52KFIp.xml
resources/project/HoHDHQ_WvHAAKj5aJOrvrg_vpt8/: xXlmKuOQ7YT_G1elNhbKQIUqSRMd.xml
resources/project/Jb61Kk_GvvOMXgvyT4GFLqNyUfU/: -5vWh4yFhxq83jG67Om1j6dilSwp.xml  -P0FT7TH809XfADGsTMDtw4dWp0p.xml  1oVQHFhqM1c1HSKWdUA1__3l1tQp.xml  KtlO4IxLX3G-0BB6aWpRoWjGPXwp.xml  bcud-hmeUQI43XfX9mSBblgPexIp.xml  cUzUiW5vrd5QG1b-WyNk3hRWRnUp.xml  nhX9BIDSoYTruRGoon6lh67Y9Wkp.xml  o830-k38pBlRxHAHbbfGQ5ECvkwp.xml
resources/project/KAXfQgCar2Yb8zOxgvf9hdmLP1E/: GeSkPJ8Q59zhZpj2_y5cproalSId.xml  GeSkPJ8Q59zhZpj2_y5cproalSIp.xml  TDnuwAjp4FfvdbaCMI3zCc9k3Mcd.xml  TDnuwAjp4FfvdbaCMI3zCc9k3Mcp.xml  ik53_NsG6creDEvmoZ6jiepDHy8d.xml  ik53_NsG6creDEvmoZ6jiepDHy8p.xml
scene/: robotTrainWorld.wrl
setup/: jetbot_ros_for_c7d0e61.patch
shortcuts/: launchJetBotROSNode.m  openStartupScript.m  stopJetBotROSNode.m
src/: workshopMenu.mlx  workshopMenu_jp.mlx
src/001_dataset_generation/: dataset_generator.slx  genCourseTraj.mlx  genCourseTraj_jp.mlx
src/002_detector_training/: annotateVideo.mlx  annotateVideo_jp.mlx  trainWhiteLine.mlx  trainWhiteLine_jp.mlx
src/003_system_integration/: line_follower.slx
src/004_hardware_connection/: jetBotKeyboardControl.m  ros_teleop.slx  teleopTestJetBot.mlx  teleopTestJetBot_jp.mlx
src/005_detector_retraining/: trainWhiteLineWithHardware.mlx  trainWhiteLineWithHardware_jp.mlx
src/006_hardware_testing/: ros_line_follower_all.slx  ros_line_follower_all_ml.m  testLineFollowerWithROS.mlx  testLineFollowerWithROS_jp.mlx
src/007_hardware_deployment/: deployLineFollower.mlx  deployLineFollower_jp.mlx  line_detection.m  mat2ocv.m  ocv2mat.m  ros_line_follower.slx  ros_monitor.slx
src/007_hardware_deployment/line_detector/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/007_hardware_deployment/line_detector/launch/: line_detector.launch  line_detector_nodelet.launch  line_detector_nodelet_cam.launch  line_detector_nodelet_camcsi.launch  line_detector_nodelet_camcsi_motor.launch  line_following.launch
src/007_hardware_deployment/line_detector/src/node/: line_detector.cpp
src/007_hardware_deployment/line_detector/src/nodelet/: line_detector_nodelet.cpp
(+39 files in other folders)
