<?xml version="1.0"?>
<package format="2">
  <name>line_detector</name>
  <version>1.0.0</version>
  <description>Package for Deployment of Generated CUDA Line Detector</description>

  <!-- Maintainer-->
  <maintainer email="tkikawad@mathworks.com">Tohru Kikawada</maintainer>

  <!-- License -->
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>opencv2</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
	  <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
